[tool.poetry]
name = "sdp"
version = "0.1.0"
description = ""
authors = ["Pierre Merienne <pierre.merienne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.6"
mmh3 = "^3.0.0"
bitarray = "^2.7.3"
pytest = "^7.2.2"
names = "^0.3.0"
bplustree = "^0.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
names = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
